# Zitong

./: .copilot-memory.md  .gitignore  README.md  overlay.html  package-lock.json  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  OverlayApp.tsx  SettingsApp.tsx  index.css  overlay.tsx  settings.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: generate-icons.sh  icon.icns
src-tauri/src/: clipboard.rs  commands.rs  db.rs  lib.rs  main.rs  panel.rs  providers.rs  updater.rs
src/commands/: index.ts  updater.ts
src/components/: AccessibilityGuide.tsx  ChatArea.tsx  ChatInput.tsx  ChatMessage.tsx  CommandPalette.tsx  DevAudit.tsx  PermissionGuide.tsx  Sidebar.tsx
src/components/settings/: AppearanceTab.tsx  AssistantsTab.tsx  CommandsTab.tsx  GeneralTab.tsx  ProviderIcon.tsx  ProvidersTab.tsx  SettingsPanel.tsx  ShortcutsTab.tsx  TemplatesTab.tsx
src/context/: AppContext.tsx
src/types/: index.ts
tools/: tauri.sh
tools/mcp-ui-audit/: package-lock.json  package.json  server.mjs
